<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="me.wavemeup.navigationapp.RouteStart"
    android:id="@+id/activity_route_start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pointA"
        android:drawableLeft="@drawable/ic_navigation_arrow_32"
        android:drawablePadding="72px"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:textColor="@android:color/black"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@+id/switch1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Spinner
        android:id="@+id/points"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:touchscreenBlocksFocus="false"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView5" />

    <Spinner
        android:id="@+id/points2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:touchscreenBlocksFocus="false"
        android:layout_below="@+id/points"
        android:layout_alignLeft="@+id/points"
        android:layout_alignStart="@+id/points"
        android:layout_alignBottom="@+id/textView5"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pointB"
        android:textColor="@android:color/black"
        android:drawableLeft="@drawable/ic_navigation_arrow_32_1"
        android:gravity="center"
        android:drawablePadding="72px"
        android:id="@+id/textView5"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/byCar"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/switch1"
        android:checked="true"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/points2"
        android:layout_alignEnd="@+id/points2"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:drawablePadding="72px"
        android:drawableLeft="@drawable/ic_sedan_car_front_32"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Start"
        android:id="@+id/button"
        android:background="@color/startButton"
        android:textColor="@android:color/white"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/points2"
        android:layout_alignEnd="@+id/points2" />

</RelativeLayout>
