<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/about_head"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/center_name"
        android:textColor="@android:color/black"
        android:textSize="12pt"
        android:background="@android:color/white"
        android:id="@+id/textView2"
        android:gravity="left"
        android:paddingLeft="20dp"
        android:typeface="serif"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="24px"
        android:paddingBottom="24px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_text"
        android:id="@+id/aboutText"
        android:textSize="8pt"
        android:background="@drawable/round_corners"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="2dp"
        android:singleLine="false"
        android:paddingBottom="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:lines="2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/version"
        android:id="@+id/textView3"
        android:textSize="6pt"
        android:padding="9dp"
        android:layout_alignParentBottom="true" />

    <!--<com.melnykov.fab.FloatingActionButton
    android:id="@+id/fabInfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:src="@drawable/ic_information_button_512"
    fab:fab_colorNormal="@color/ColorPrimary"
    fab:fab_colorPressed="@color/ColorPrimaryDark"
    fab:fab_colorRipple="@color/ColorPrimaryLight"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    />

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fabMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_map_with_placeholder_512_1"
        fab:fab_colorNormal="@color/ColorPrimary"
        fab:fab_colorPressed="@color/ColorPrimaryDark"
        fab:fab_colorRipple="@color/ColorPrimaryLight"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />-->

    <Button
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="email"
        android:id="@+id/email_but"
        android:padding="20dp"
        android:textColor="@color/ColorPrimary"
        android:onClick="sendEmail"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Map"
        android:id="@+id/button4"
        android:textColor="@color/ColorPrimary"
        android:layout_alignBottom="@+id/aboutText"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:layout_alignTop="@+id/button2"
        android:onClick="openMap" />

    <Button
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="info"
        android:id="@+id/button2"
        android:padding="20dp"
        android:textColor="@color/ColorPrimary"
        android:layout_alignBottom="@+id/aboutText"
        android:layout_toLeftOf="@+id/email_but"
        android:layout_toStartOf="@+id/email_but"
        android:onClick="showInfo" />
</RelativeLayout>